# trip-planner

back-end/: .gitignore  README.md  build.sh  pyproject.toml  samconfig.toml  template.yaml
back-end/.aws-sam/: build.toml
back-end/functions/: auth.py  create_event.py  requirements.txt  test_auth.py
back-end/functions/planner/util/: get_secret.py  schema_validation.py
back-end/functions/util/: get_secret.py  mongo_init.py
back-end/src/: auth.py  create_event.py  requirements.txt  test_auth.py
back-end/src/planner/http/: response.py  validator.py
back-end/src/planner/jwt/: create_jwt_token.py  validator.py
back-end/src/planner/util/: get_secret.py
back-end/tests/unit/src/: test_auth.py
backend/: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  build.sh  pyproject.toml  samconfig.toml  template.yaml
backend/src/: auth.py  create_activity.py  create_event.py  google_auth.py  password_signin.py  password_signup.py  requirements.txt  test_auth.py
backend/src/activity/: create_activity.py  delete_activity.py  get_activity.py  update_activity.py
backend/src/auth/: google_auth.py  password_signin.py  password_signup.py  test_auth.py
backend/src/plan/: create_plan.py  delete_plan.py  get_plan.py  get_plans.py  update_plan.py
backend/src/planner/date/: get_activity_date.py  get_plan_date.py
backend/src/planner/db/: activities_schema.py  create_collection.py  db_init.py  enforce_schema.py  user_schema.py
backend/src/planner/http/: error.py  exception.py  response.py  (+1 more)
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
(+121 files in other folders)
